# mindhub

./: .env  .gitignore  Dockerfile  build.sh  cloudformation.yml  docker-compose.yaml  nest-cli.json  package-lock.json  package.json  serverless.yml  tsconfig.json
.infra/: deploy.sh  (+1 more)
api/: package.json  (+4 more)
apr/: .dockerignore  .env  .env.default  .gitignore  Dockerfile  pyproject.toml  requirements.txt  texts.json
apr/datasets/: .gitignore
apr/envs/: .env.default  .env.local  .env.prod
apr/models/interfaces/: model.py  model_factory.py  text.py
apr/models/own/: dummy_model.py
apr/src/: db.py  dump.py  main.py
apr/src/interfaces/: model.py  model_factory.py
apr/src/models/bert_mlp/: .gitignore  config.py  model_interface.py
apr/src/models/bert_mlp/data/finetune_mlp_lm/: MLP_LM_EXT.h5  MLP_LM_NEU.h5  MLP_LM_OPN.h5
apr/src/models/bert_mlp/prediction/: prediction.py
apr/src/models/bert_mlp/preprocess/: preprocess.py
apr/src/models/bert_mlp/training/: data_loader.py  data_utils.py  dataset_processors.py  embedding_extractor.py  mlp_finetune_model.py  utils.py
apr/src/models/gpt_fine_tuned/: evaluate.py  fine-tune.py  model_interface.py  predict.py
frs/: .dockerignore  .env.default  .gitignore  Dockerfile  db.py  friendship_affinity.py  global_affinity.py  interests_affinity.py  main.py  pyproject.toml  recommendations.py  requirements.txt
frs/envs/: .env.default  .env.local  .env.prod
frs/papers/: personet.py
frs/src/: config.py  db.py  friendship_affinity.py  global_affinity.py  interests_affinity.py  main.py
frs/src/papers/: tommasel.py
frs/utils/: ids.json  populator.py
others/chatbot/: .env.default  .gitignore  Dockerfile  pyproject.toml
others/chatbot/envs/: .env.default  .env.local  .env.prod
others/chatbot/src/: db.py  main.py  utils.py
(+490 files in other folders)
